src/golden/cards/templates/nested/errors/test.golden/objects.fl
	object Obj
		ctor makeMe
		
		template format
	
	card UseObjects
		state
			Obj o

		template top
			field1 <- o
			field2 <- o.format
			hold <- o
			hold2 <- o.format
